# productRecommendation

./: build_push.sh  docker-compose.yml  tmp.Dockerfile
.github/workflows/: ci.yml
kubernetes/: application.yml  kustomization.yml  parent-application.yml
kubernetes/flask/: deployment-flask.yml  flask-application.yml  kustomization.yml  service-flask.yml
kubernetes/rails/: deployment-rails.yml  kustomization.yml  rails-application.yml  service-rails.yml
productRecommendation-system/: Dockerfile  Gemfile
productRecommendation-system/app/controllers/: products_controller.rb
productRecommendation-system/app/javascript/packs/: application.js
productRecommendation-system/app/javascript/stylesheets/: application.scss
productRecommendation-system/app/views/products/: index.html.erb  new.html.erb
productRecommendation-system/config/: application.rb  cable.yml  credentials.yml.enc  routes.rb
productRecommendation-system/config/environments/: development.rb  production.rb
productRecommendation-system/config/initializers/: opentelemetry.rb
productRecommendation-system/db/: schema.rb
productRecommendation-system/spec/controllers/: products_controller_spec.rb
recommendationEngine/: Dockerfile  README.md  pyproject.toml
recommendationEngine/src/: app.py  hello.py
recommendationEngine/src/recommendationengine/: __init__.py
recommendationEngine/tests/: test_app.py
