[project]
name = "recommendationengine"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hrt-ykym", email = "yoko.haruru.phy@outlook.jp" }
]
dependencies = [
    "flask>=3.0.3",
    "requests>=2.32.3",
    "pytest>=8.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"recommendationengine" = "recommendationengine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recommendationengine"]
