[project]
name = "recommendationengine"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hrt-ykym", email = "yoko.haruru.phy@outlook.jp" }
]
dependencies = [
    "flask>=3.0.3",
    "requests>=2.32.3",
    "pytest>=8.2.2",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-distro>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-flask>=0.46b0",
    "opentelemetry-instrumentation-requests>=0.46b0",
    "prometheus-flask-exporter>=0.23.0",
    "prometheus-client>=0.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"recommendationengine" = "recommendationengine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/recommendationengine"]
